# rubinstein-bargaining

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: rubinstein-bargaining.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  finite_horizon.py  multi_issue.py  nash_bargaining.py  outside_options.py  rubinstein.py
src/viz/: __init__.py  app.py
tests/: test_convergence.py  test_finite.py  test_nash_bargaining.py  test_rubinstein.py
